# BCI-IM

./: .gitignore  CLAUDE.md  Instrucciones.txt  README.md
backend/: pyproject.toml  requirements.txt
backend/configs/: default.yaml
backend/data/processed/: compare_methods_BNCI2014_001.csv  compare_methods_BNCI2014_004.csv  compare_methods_Kumar2024.csv  model_BNCI2014_001_s0_eegnet_pooled.json  model_BNCI2014_001_s0_eegnet_pooled.pkl  model_BNCI2014_001_s1_csp_lda.json  model_BNCI2014_001_s1_csp_lda.pkl  model_BNCI2014_001_s1_csp_lda_cross.json  model_BNCI2014_001_s1_csp_lda_cross.pkl  model_BNCI2014_001_s1_eegnet.json  model_BNCI2014_001_s1_eegnet.pkl  model_BNCI2014_001_s1_eegnet_cross.json  model_BNCI2014_001_s1_eegnet_cross.pkl  model_BNCI2014_001_s2_csp_lda.json  model_BNCI2014_001_s2_csp_lda.pkl  model_BNCI2014_001_s2_csp_lda_cross.json  model_BNCI2014_001_s2_csp_lda_cross.pkl  model_BNCI2014_001_s2_eegnet.json  model_BNCI2014_001_s2_eegnet.pkl  model_BNCI2014_001_s2_eegnet_cross.json  model_BNCI2014_001_s2_eegnet_cross.pkl  (+412 more)
backend/scripts/: assemble_compare.py  compare_methods.py  demo_csp.py  demo_dsp.py  download_data.py  eval_fbcsp.py  evaluate_all.py  make_report_figures.py  precompute_payloads.py  probe_dataset.py  run_live_sim.py  run_offline.py  run_server.py  setup_data.py  sweep_shrinkage.py  train_all_regimes.py  train_eegnet.py  train_eegnet_crossdataset.py  train_eegnet_pooled.py  train_model.py
backend/tests/: test_csp.py  test_dsp.py  test_fbcsp.py  test_loader.py  test_payloads.py  test_pipeline.py  test_streaming.py  test_training.py
(+92 files in other folders)
